Fix overflow issue on mobile devices, add new build

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -7,6 +7,7 @@ body {
   font-size: 16px;
   max-width: 1366px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 a {
@@ -23,22 +24,3 @@ img {
   max-width: 100%;
   height: auto;
 }
-
-/* body {
-  margin: 0;
-  font-family: 'Robodo', sans-serif;
-  color: #666;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-a {
-  color: $mainOrange;
-} */
